hphp/hack/test/typecheck/not_trivial_strict_eq.php.exp
WARN: File "not_trivial_strict_eq.php", line 37, characters 10-18:
This expression is likely always `false` (Warn[12001])
  File "not_trivial_strict_eq.php", line 35, characters 13-15:
  This is an int
  File "not_trivial_strict_eq.php", line 35, characters 22-27:
  This is a string
ERROR: File "not_trivial_strict_eq.php", line 12, characters 10-10:
Was expecting a return type hint (Typing[4030])
